[gd_scene load_steps=2 format=2]

[ext_resource path="res://GraphGrammar/GrammarNodes/GUIS/NodeSettings.gd" type="Script" id=1]

[node name="NodeSettings" type="MarginContainer"]
offset_left = 16.0
offset_right = 198.0
offset_bottom = 208.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 182.0
offset_bottom = 208.0

[node name="StartingNodeCheckbox" type="CheckBox" parent="VBoxContainer"]
offset_right = 182.0
offset_bottom = 24.0
text = "Is Starting Node In Rule"

[node name="EndingNodeCheckbox" type="CheckBox" parent="VBoxContainer"]
offset_top = 28.0
offset_right = 182.0
offset_bottom = 52.0
text = "Is Ending Node In Rule"

[node name="ReplaceableCheckbox" type="CheckBox" parent="VBoxContainer"]
offset_top = 56.0
offset_right = 182.0
offset_bottom = 80.0
pressed = true
text = "Replaceable"

[node name="NodeNumber" type="LineEdit" parent="VBoxContainer"]
offset_top = 84.0
offset_right = 182.0
offset_bottom = 108.0
placeholder_text = "Node Number"

[node name="RoomTypes" type="OptionButton" parent="VBoxContainer"]
offset_top = 112.0
offset_right = 182.0
offset_bottom = 132.0
text = "RoomType"

[node name="DeleteChecbox" type="CheckBox" parent="VBoxContainer"]
offset_top = 136.0
offset_right = 182.0
offset_bottom = 160.0
text = "Delete?"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
offset_top = 164.0
offset_right = 182.0
offset_bottom = 180.0
custom_minimum_size = Vector2( 182, 16 )

[node name="DeleteButton" type="Button" parent="VBoxContainer"]
visible = false
offset_top = 140.0
offset_right = 182.0
offset_bottom = 160.0
text = "Press To Delete"

[connection signal="pressed" from="VBoxContainer/DeleteChecbox" to="." method="_on_DeleteChecbox_pressed"]
